# flux-delegate-py

./: Makefile.am  README.md  configure.ac  delegate.toml  delegate_c_bridge.c  delegate_handler.py
.devcontainer/: Dockerfile  devcontainer.json
cmd/: flux-remote.py
examples/fractale/: README.md
